fix user avatar being clipped

--- a/src/components/UserHeader/UserHeader.module.css
+++ b/src/components/UserHeader/UserHeader.module.css
@@ -5,8 +5,7 @@
 	overflow: hidden;
 
 	.avatar {
-		width: 18px;
-		height: 18px;
+		height: 100%;
 		border-radius: 50%;
 		margin-right: 8px;
 	}
